--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,104 +1,84 @@
-.header{
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Franklin Gothic Medium', Arial, sans-serif;
+    line-height: 1.6;
+    overflow-x: hidden;
+}
+
+.header {
     background-color: #f65a00ea;
-    max-width: 100%;
-    height: 220px;
     text-align: center;
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 20px 0 0 0;
 }
-.footer{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    height: 150px;
-    color: black;
-    background-color:#d55c00e5;
-    max-width: auto;
-    text-align: center;
-    clear: both;
+
+ul {
+    background-color: #8b3a00;
+    list-style: none;
+    padding: 10px 30px; 
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
 }
-.ul{
-    text-align: left;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #d55c00e5;
-    padding: 5px;
-    color: white;
-}
-ul a{
+
+ul li { margin-right: 25px; }
+
+ul li a {
     color: white;
     text-decoration: none;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding: 10px;
-}    
-li{
-    font-size: small;
-    display: inline-block;
-    height: 20px;
-}
-.col-4{
-    background-color: #fab278;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    max-width: 300px;
-    height: 1000px;
-    margin: 0px;
-}
-.col-9{
-    max-width: auto;
-}
-.img1{
-    margin-left: 25px;
-}
-.img2{
-    margin-left: 15px;
-}
-.p1{
-    color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: x-large;
     font-weight: bold;
 }
-.p2{
-    color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.p3{
-    color: #d55c00e5;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: x-large;
-    font-weight: bold;
-}
-.p4{
-    color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    max-width: auto;
-}
-.p5{
-    color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
-    font-weight: bold;
-    line-height: 2px;
-}
-.p6{
-    color: black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
-    width: 300px;
-}
-input[type="text"], input[type="email"], textarea, select, button{
+
+.gele-lijn {
+    width: 100%;
+    height: 4px;
+    background-color: yellow;
     display: block;
-    margin: 15px 0px;
-    max-width: 800px;
-    box-sizing: border-box;
-    border-radius: 4px;
 }
-textarea{
-    height: 200px;
-    padding: 5px 4px;
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    min-height: calc(100vh - 250px);
 }
-button{
+
+.col-4 {
+    background-color: #fab278;
+    width: 25%;
+    padding: 30px;
+}
+
+.col-8 {
+    background-color: white;
+    width: 75%;
+    padding: 30px;
+}
+
+/* Tekst en Afbeeldingen */
+img { max-width: 100%; height: auto; }
+.p1, .p3 { font-size: x-large; font-weight: bold; margin-bottom: 15px; }
+.p3 { color: #d55c00e5; }
+.p4 { margin-bottom: 15px; }
+.p5 { font-size: large; font-weight: bold; line-height: 1.5; }
+
+.footer {
     background-color: #d55c00e5;
+    text-align: center;
+    padding: 30px;
     color: white;
-    width: 100px;
-    height: 30px;
-    border-radius: 4px;
-    border-color: #d55c00e5;
+}
+
+/* Mobiel */
+@media only screen and (max-width: 768px) {
+    .row { display: block; }
+    .col-4, .col-8 { width: 100%; }
+    ul { flex-direction: column; padding-left: 20px; }
+    ul li { margin-bottom: 10px; }
+
 }
